@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3131 2019/07/31 14:36:45 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3132 2019/07/31 14:38:58 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5088,3 +5088,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated net/youtube-dl to 20190730 [leot 2019-07-31]
 	Updated converters/R-base64enc to 0.1.3 [brook 2019-07-31]
 	Updated databases/R-RSQLite to 2.1.2 [brook 2019-07-31]
+	Updated databases/R-sqldf to 0.4.11 [brook 2019-07-31]
